--- a/styles.css
+++ b/styles.css
@@ -8,46 +8,53 @@
     font-family: "Roboto", sans-serif;
 }
 
-/* LANDING */
-
-
-.nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .row{
     width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 1500px;
+    margin: 16px 12px;
+}
+.nav__row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav__logo{
     display: flex;
-    align-items: center;
-    margin: 8px 0;
-    padding-bottom: 4px;
-
 }
+
 .nav__logo--img{
-    height: 40px;
-    width: 40px;
+    width: 48px;
+    height: 48px;
+}
+
+.nav__logo--title{
+    font-size: 28px;
+    font-weight: 700;
+    padding: 4px;
+    margin-top: 2px;
 }
 
 .nav__links{
-    width: 100%;
-    height: 100%;
+    width: 50%;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 }
-
 .nav__link{
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 500;
     line-height: 1.5;
     margin: 8px 0;
-    padding: 4px;
-    border-bottom: 2px solid transparent;
+    padding-bottom: 4px;
+    text-decoration: none;
+}
+
+.nav__link--primary{
+    color: white;
+    background-color: #7342d6;
+    border: none;
+    border-radius: 30px;
+    padding: 12px 24px;
+    
 }
