--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@
     max-width: 1500px;
     margin: 16px 12px;
 }
+
+/* LANDING */
+
 .nav__row{
     display: flex;
     justify-content: space-between;
@@ -57,4 +60,38 @@
     border-radius: 30px;
     padding: 12px 24px;
     
+}
+
+/* HEADER */
+
+.container{
+    width: 100%;
+    max-width: 1500px;
+    padding: 72px 0;
+}
+
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 16px;    
+}
+
+.header__description{
+    width: 30%;
+}
+
+h1{
+    font-size: 52px;
+}
+.purple{
+    color: #7342d6;
+}
+
+p{
+    font-size: 20px;
+}
+
+.header__img{    
+    overflow: hidden;
 }
