--- a/styles.css
+++ b/styles.css
@@ -67,31 +67,42 @@
 .container{
     width: 100%;
     max-width: 1500px;
-    padding: 72px 0;
+    padding: 96px 0;
 }
 
-.row{
+.header__row{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 8px 16px;    
+    justify-content: space-between;    
 }
 
 .header__description{
-    width: 30%;
+    width: 100%;   
+    padding: 0 32px;
 }
 
 h1{
-    font-size: 52px;
+    font-size: 56px; 
+    padding: 16px 0;   
 }
 .purple{
     color: #7342d6;
 }
 
 p{
-    font-size: 20px;
+    font-size: 24px;
+    padding: 16px 0;
+}
+
+.header__description--para{
+    margin: 16px;
 }
 
 .header__img{    
-    overflow: hidden;
+    width: 100%;
+}
+
+.header__email--input{
+    width: 100%;
+    border: 4px solid #;
 }
