--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,21 @@
     font-family: "Roboto", sans-serif;
 }
 
+.container{
+    padding: 84px 0;
+}
+
 .row{
     width: 100%;
-    max-width: 1500px;
-    margin: 16px 12px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.img{
+    width: 100%;
+}
+.no-cursor{
+    cursor: not-allowed;
 }
 
 /* LANDING */
@@ -44,6 +55,7 @@
     justify-content: space-between;
     align-items: center;
 }
+
 .nav__link{
     font-size: 20px;
     font-weight: 500;
@@ -58,26 +70,26 @@
     background-color: #7342d6;
     border: none;
     border-radius: 30px;
-    padding: 12px 24px;
+    padding: 12px 24px;    
+    z-index: 2;
+    transition: 300ms ease;
     
+}
+
+.nav__link--primary:hover{
+    background-color: rgb(93, 62, 255);
 }
 
 /* HEADER */
 
-.container{
-    width: 100%;
-    max-width: 1500px;
-    padding: 96px 0;
-}
-
-.header__row{
+header .row{
     display: flex;
     align-items: center;
     justify-content: space-between;    
 }
 
 .header__description{
-    width: 100%;   
+    width: 50%;   
     padding: 0 32px;
 }
 
@@ -91,18 +103,138 @@ h1{
 
 p{
     font-size: 24px;
-    padding: 16px 0;
+    padding: 48px 0;
 }
 
 .header__description--para{
-    margin: 16px;
+    margin: 16px;   
+}
+
+.header__email{
+    width: 100%;
+    max-width: 540px;
+    height: 72px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.header__email--input{
+    width: 100%;
+    border: 2px solid rgb(229, 231, 235);
+    border-radius: 480px;
+    font-weight: 500;
+    font-size: 20px;
+    color: rgb(36,62,99);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    transition: border-color 300ms;
+}
+
+.header__email--btn{
+    margin: 8px;
+    width: 140px;
+    height: calc(100% - 16px);
+    font-size: 20px;
+    font-weight: 700;
+    z-index: 2;
+    transition: 300ms ease;
+    background-color: #7342d6;
+    color: #fff;
+    border-radius: 30px;
+}
+
+.header__email--btn:hover{
+    background-color: rgb(93, 62, 255);
+}
+
+.header__customers--title{
+    margin-top: 60px;
+    opacity: .5;
+    font-size: 20px;
+}
+
+.header__customers{
+    margin-top: 4px;
+    opacity: .5;
+    padding-right: 72px;
 }
 
 .header__img{    
     width: 100%;
 }
 
-.header__email--input{
+/* FEATURES */
+
+.row__narrow{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section__tag{
+    font-size: 24px; 
+    color: #7342d6;      
+}
+
+.section__title{
+    font-size: 48px;
+    padding: 24px 0;
+}
+
+.section__para{
+    font-size: 16px;
+    max-width: 560px;
+    text-align: center;
+}
+
+.features{
     width: 100%;
-    border: 4px solid #;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.feature{
+    width: calc(100% / 3);
+}
+
+.feature__row{
+    display: flex;
+    align-items: flex-start;
+    padding: 32px 24px;
+}
+
+.feature__img--wrapper{
+    display: flex;
+    padding: 16px;
+    margin-bottom: 24px;
+    border: 1px solid rgba(115, 66, 214, 0.365);
+    border-radius: 100px;
+}
+
+.feature__img{
+    color: rgb(115, 66, 214);
+    width: 24px;
+    height: 24px;
+}
+
+.feature__text{
+    margin-top: 8px;
+    margin-left: 8px;
+}
+
+.feature__para{    
+    font-size: 16px;
+    color: rgb(36, 62, 99);
+    line-height: 2;
+}
+
+/* QUALITY */
+
+#quality .row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
