--- a/styles.css
+++ b/styles.css
@@ -89,12 +89,12 @@ header .row{
 }
 
 .header__description{
-    width: 50%;   
-    padding: 0 32px;
+    width: 60%;   
+    padding: 0 16px;
 }
 
 h1{
-    font-size: 56px; 
+    font-size: 52px; 
     padding: 16px 0;   
 }
 .purple{
@@ -102,7 +102,7 @@ h1{
 }
 
 p{
-    font-size: 24px;
+    font-size: 16px;
     padding: 48px 0;
 }
 
@@ -151,19 +151,22 @@ p{
 }
 
 .header__customers--title{
-    margin-top: 60px;
+    padding: 32px 0;
     opacity: .5;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .header__customers{
-    margin-top: 4px;
+    width: 100%;
     opacity: .5;
-    padding-right: 72px;
+}
+.header__img--wrapper{
+    display: flex;
+    justify-content: flex-end;
 }
 
 .header__img{    
-    width: 100%;
+    width: 90%;
 }
 
 /* FEATURES */
@@ -237,4 +240,100 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.quality__description{
+    width: 60%;
+    padding: 0 16px;
+}
+
+.section__para{
+    text-align: left;
+}
+
+.btn{
+    background-color: rgb(115, 66, 214);
+    color: white;
+    font-size: 20px;
+    padding: 12px 24px;
+    border: 4px none;
+    border-radius: 30px;
+}
+
+.quality__img--wrapper{
+    padding: 16px;
+    margin: 16px 32px;
+    border: 1px solid rgba(115, 66, 214, 0.365);
+    border-radius: 2px;
+    position: relative;
+    display: flex;
+    z-index: 3;
+}
+.quality__img{
+    width: 80%;
+    padding: 36px 0 36px 48px;
+}
+
+.quality__grid{
+    transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    fill: rgb(100, 21, 255);
+    color: rgba(100, 21, 255, .36);
+    z-index: -2;
+    display: block;
+}
+/* STEPS */
+
+#steps .row{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.steps__img--wrapper{}
+
+.steps__img{
+    width: 80%;   
+}
+
+.steps__grid{}
+
+.steps__description{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    padding: 0 16px;
+}
+
+.steps__list{}
+
+.step{
+    display: flex;
+    flex-direction: column;
+}
+
+.step__number{
+    font-size: 28px;
+    font-weight: 500;
+    color: rgba(121, 69, 224, 0.365);
+}
+
+.step__description{
+    display: flex;
+    flex-direction: column;
+    padding: 16px 0;
+}
+
+.step__title{
+    font-size: 24px;
+    margin: 8px 0;
+}
+
+.step__para{
+    font-size: 16px;
+    color: rgb(36, 62, 99);
+    line-height: 2;
 }
