--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,14 @@
     font-family: "Roboto", sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+body{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 .container{
     padding: 92px 0;
 }
@@ -21,6 +29,15 @@
 .img{
     width: 100%;
 }
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+a:hover{
+    text-decoration: underline;    
+}
+
 .no-cursor{
     cursor: not-allowed;
 }
@@ -78,6 +95,63 @@
 
 .nav__link--primary:hover{
     background-color: rgb(93, 62, 255);
+}
+
+.btn__menu{
+    display: none;
+    background-color: transparent;
+    border: none;
+    font-size: 32px;
+    color: #7342d6;    
+}
+
+.menu__backdrop{
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.menu--open .menu__backdrop{
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open{
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+.menu__links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+
+.menu__list{
+    padding: 32px 0;
+}
+
+.menu__link {
+    font-size: 40px;
+    color: white;
+}
+
+.btn__menu--close{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
 }
 
 /* HEADER */
@@ -265,6 +339,10 @@ p{
     border-radius: 30px;
 }
 
+.btn:hover{
+    background-color: rgb(93, 62, 255);
+}
+
 .quality__img--wrapper{
     padding: 16px;
     margin: 16px 32px;
@@ -414,6 +492,7 @@ p{
 #values .btn{
     margin-top: 32px;
 }
+
 .values__img{
     width: 40%;
 }
@@ -455,12 +534,12 @@ p{
 }
 
 .plan{    
+    width: 30%;
     position: relative;
     margin: 16px 16px;    
     text-align: center;    
     background-color: rgb(255, 255, 255);
-    border-color: #808080;
-    border-width: 2px;
+    border: 1px solid #bfbfbf;
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     padding: 32px 8px;
@@ -500,8 +579,9 @@ p{
 }
 
 .plan__middle{
-    border: #808080;
-    padding: 24px;
+    border-top: 1px solid #bfbfbf;
+    border-bottom: 1px solid #bfbfbf;
+    padding: 8px 24px;
     line-height: normal;
 }
 
@@ -515,14 +595,16 @@ p{
     padding: 8px 0;
 }
 
-.plan__bottom{}
+.plan__bottom{
+    padding-top: 24px;
+}
 
 .plan__button{
     font-size: 16px;
     font-weight: 500;
     padding: 12px 24px;
     border: 4px none;
-    border-radius: 30px;   
+    border-radius: 30px;       
 }
        
 .plan:nth-child(1) .plan__stripe {
@@ -530,13 +612,18 @@ p{
 }
 .plan:nth-child(1) .plan__button{
     background-color: #9ae6b4;
-    color: white;
+    transition: all 300ms ease;
 }
 
-.plan:nth-child(2){
+.plan:nth-child(2) {
     background-color: rgb(102, 126, 234);
     color: white;
 }
+
+.plan:nth-child(2) .plan__duration{
+    color: white;
+}
+
 .plan:nth-child(2) .plan__button{
     background-color: white;
     color: rgb(102, 126, 234);
@@ -777,115 +864,13 @@ p{
 .footer__social--link{}
 
 /* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
-@media (max-width: 768px){
-    .header .row, #quality .row, #steps .row, #values .row{
-        flex-direction: column;
-    }
 
-    .header__description, .quality__description, .steps__description, .values__description{
-        width: 100%;
-        padding: 0 16px;
-        text-align: center;
-    }
+@media (max-width: 768px)
+   
+/* SMALL PHONES, LARGE SMARTPHONES */
 
-    .header__img--wrapper, .quality__img--wrapper, .steps__img--wrapper, .values__img{
-        width: 100%;
-        padding: 0 16px;
-        justify-content: center;
-    }
-
-    .header__img, .quality__img{
-        width: 100%;
-        padding: 0;
-    }
-
-    .steps__img{
-        width: 100%;
-        padding: 0;
-    }
-
-    .steps__description{
-        margin: 24px 0;
-        width: 100%;
-        padding: 0 16px;
-    }
-
-    .values__img{
-        width: 80%;
-        margin: 0 auto;
-        padding: 0;
-    }
-
-    .values__list{
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .value{
-        margin-top: 24px;
-        align-items: center;
-        text-align: center;
-    }
-
-    .value__name{
-        padding: 8px 0;
-    }
-
-    .price__row{
-        padding-left: 16px;
-        margin-left: 16px;
-    }
-
-    .plans{
-        flex-direction: column;
-        align-items: center;        
-    }
-
-    .plan{
-        width: 80%;
-        margin: 16px 0;        
-    }
-
-    #testimonials .row{
-        flex-direction: column;
-    }
-
-    .testimonials__img{
-        width: 100%;
-        padding: 0 0 36px 0;
-    }
-
-    .testimonials__descriptions{
-        width: 100%;
-        margin: 0;
-        padding: 0 16px;
-        align-items: center;
-        text-align: center;
-    }
-
-    .testimonial__details{
-        padding-left: 0;
-    }
-
-    .start__row{
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .start__title, .start__buttons{
-        width: 100%;
-        padding: 0;
-    }
-
-    @media(max-width: 550px;){
+@media(max-width: 550px){
         .btn__menu{
-            display: block;
-            background: none;
-            border: none;
-            font-size: 32px;
-            color: rgb(36, 62, 99);
-            cursor: pointer;
-            z-index: 3;
-        }
-    
+            display: block;            
+        }    
     }
