--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 html{
     scroll-behavior: smooth;
 }
+
 body{
     max-width: 100vw;
     overflow-x: hidden;
@@ -34,6 +35,7 @@ a{
     text-decoration: none;
     color: inherit;
 }
+
 a:hover{
     text-decoration: underline;    
 }
@@ -68,9 +70,18 @@ a:hover{
 
 .nav__links{
     width: 50%;
+    text-decoration: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+li{  
+    text-decoration: none;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    list-style-type: none;
 }
 
 .nav__link{
@@ -186,13 +197,14 @@ p{
 
 .header__email{
     width: 100%;
-    max-width: 540px;
+    max-width: 450px;
     height: 72px;
     position: relative;
     display: flex;
-    justify-content: flex-end;
+   justify-content: flex-end;
     align-items: center;
 }
+
 .header__email--input{
     width: 100%;
     border: 2px solid rgb(229, 231, 235);
@@ -234,6 +246,7 @@ p{
     width: 100%;
     opacity: .5;
 }
+
 .header__img--wrapper{
     display: flex;
     justify-content: flex-end;
@@ -352,6 +365,7 @@ p{
     display: flex;
     z-index: 3;
 }
+
 .quality__img{
     width: 80%;
     padding: 36px 0 36px 48px;
@@ -369,6 +383,7 @@ p{
     z-index: -2;
     display: block;
 }
+
 /* STEPS */
 
 #steps .row{
@@ -377,6 +392,7 @@ p{
     justify-content: center;
     align-items: center;
 }
+
 .steps__img--wrapper{
     width: 50%;
     position: relative;
@@ -386,8 +402,6 @@ p{
     width: 90%;   
 }
 
-.steps__grid{}
-
 .steps__description{
     display: flex;
     flex-direction: column;
@@ -395,8 +409,6 @@ p{
     width: 50%;
     padding: 84px 16px;
 }
-
-.steps__list{}
 
 .step{
     display: flex;
@@ -513,6 +525,7 @@ p{
 .pricing__section--tag{
     font-size: 24px;
 }
+
 .pricing__section--title{
     font-size: 48px;
     padding: 24px 0;
@@ -628,6 +641,7 @@ p{
     background-color: white;
     color: rgb(102, 126, 234);
 }
+
 .plan:nth-child(3) .plan__stripe, .plan__button{
     background-color: #feb2b2;
 }
@@ -657,16 +671,10 @@ p{
     padding: 0 16px;
 }
 
-.testimonial{}
-
 .testimonial__rating{
     margin-bottom: 8px;
     color: #fabf2a;
 }
-
-.testimonial__title{}
-
-.testimonial__para{}
 
 .testimonial__bottom{
     display: flex;
@@ -756,7 +764,7 @@ p{
 }
 
 .start__button{
-    padding: 20px 36px;
+    padding: 12px 24px;
     margin: 16px;
 }
 
@@ -782,7 +790,7 @@ p{
 
 .footer__container{
     width: 100%;
-    height: 500px;
+    height: 800px;
     background-color: rgb(100, 21, 255);
     border-radius: 8px;
     display: flex;
@@ -859,18 +867,387 @@ p{
     color: #cbd5e0;
 }
 
-.footer__socials{}
-
-.footer__social--link{}
-
 /* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
 
-@media (max-width: 768px)
+@media (max-width: 768px) {
+    .nav__row{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        padding: 0;
+        margin: auto;
+        width: 100%;
+    }
+
+    .btn__menu{
+        display: block;            
+    }
+
+    .nav__links{
+        display: none;
+    }
+
+    .row{
+        flex-direction: column;
+        text-align: center;
+        padding: 0 24px;
+    }
+
+    .header__description{
+        width: 100%;
+        padding: 0 16px;
+    }
+    h1{
+        font-size: 36px; 
+        padding: 16px 0;   
+    }
+        
+    .header__description--para{
+        margin: 8px 0;   
+    }
+
+    .header__email{
+        align-items: center;
+        margin: auto;
+    }
+       
+    .header__email--input{
+        font-size: 20px;       
+    }
+
+    .header__customers{
+        padding: 16px 48px;
+        font-size: 8px;
+    }
+
+    .header__img--wrapper{
+        justify-content: center;       
+    }
+
+    .header__img{
+        width: 100%;
+        padding: 36px 0 0 0;
+    }
+
+    .features{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 24px;
+        padding: 0 36px;
+    }
+
+    .feature{
+       width: 80%;       
+    }
+
+    .feature__row{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 0 24px;        
+    }
+
+    .feature__img--wrapper{
+        margin-bottom: 16px;
+    }
+
+    .feature__para{
+        padding: 8px 0;
+    }
+   
+    #quality .row{
+        flex-direction: column-reverse;
+        text-align: center;        
+    }
+
+    .quality__description{
+        width: 100%;
+        padding: 48px 16px;
+    }
+
+    .section__para{
+        margin: auto;
+        text-align: center;
+    }
+
+    .quality__img--wrapper{
+        margin: 16px 0;
+        
+    }
+    .quality__img{
+        width: 100%;
+        padding: 16px 0 0 0;
+    }
+    .quality__grid{
+        display: none;
+    }
+    .steps__img--wrapper{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    .steps__description, .steps__list, .step{
+        width: 100%;
+        padding: 32px 16px;
+        margin: 0;  
+        align-items: center;
+        text-align: center;
+    }
+
+    .step{
+        flex-direction: column;
+               
+        margin: 16px 0;
+        justify-content: center;
+        padding: 12px;
+    }
+
+    .values{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .values__description, .values__img{
+        width: 100%;
+        text-align: center;
+        padding: 24px;
+        margin: auto;
+    }
+
+    .values__list, .value, .value__title{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 36px;
+        padding: 12px;
+    }
+
+    .price__row{
+        align-items: center;
+        padding-left: 32px;
+        margin-left: 0;
+        padding-right: 32px;
+    }
+
+    .plans{
+        flex-direction: column;
+        align-items: center;   
+        margin: 0 auto;    
+        padding: 0 64px;
+    }
+
+    .plan{
+        width: 70%;
+        margin: 16px 0;
+    }
+    #testimonials .row{
+        flex-direction: column;
+    }
+    .testimonials__img, .testimonials__descriptions{
+        width: 80%;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+    }
+    .testimonial__bottom{
+        flex-direction: column;
+        align-items: center;
+    }
+    .testimonial__profile{
+        flex-direction: column;
+        align-items: center;
+    }
+    .testimonial__details{
+        padding: 16px 0 0 0;
+        text-align: center;
+    }
+    .testimonial__buttons{
+        margin-top: 16px;
+    }
+
+    .start__row{
+        flex-direction: column;
+        text-align: center;
+        padding: 0 16px;
+        margin: 0 32px;
+    }
+
+    .start__title {        
+        width: 100%;
+        text-align: center;
+        padding: 0;
+    }
+
+    .start__buttons{    
+        width: 100%;    
+        display: flex;
+        flex-direction: row;  
+        justify-content: center;      
+    }
+
+    .footer__row{
+        flex-direction: column;
+        flex-wrap: wrap;
+        text-align: center;
+        padding: 0 16px;
+    }
+
+    .footer__columns{        
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .footer__column{
+        margin: 16px 0;
+        align-items: center;
+    }
+    .footer__bottom{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .footer__logo{
+        margin-bottom: 16px;
+    }
+}
    
 /* SMALL PHONES, LARGE SMARTPHONES */
 
-@media(max-width: 550px){
+@media (max-width: 550px){
         .btn__menu{
             display: block;            
-        }    
+        }   
+        .nav__links{
+            display: none;
+        }
+        .header__description{
+            width: 100%;
+            text-align: center;
+            padding: 0 16px;
+        }
+        .header__img--wrapper{
+            justify-content: center;
+            padding: 0;
+        }
+        .header__img{
+            width: 100%;
+        }
+
+        .section__title{
+            font-size: 36px;
+            padding: 16px 0;
+        }
+        .features{
+            flex-direction: column;
+        }
+        .feature{
+            width: 100%;
+        }
+        #quality .row{
+            flex-direction: column;
+        }
+        .quality__description{
+            width: 100%;
+            text-align: center;
+            padding: 0 16px;
+        }
+        .quality__img--wrapper{
+            margin: 16px 0;
+        }
+        .quality__img{
+            width: 100%;
+            padding: 16px 0 0 0;
+        }
+        .steps__img--wrapper, .steps__description{
+            width: 100%;
+            padding: 0;
+            margin: 0;
+        }
+        .steps__description{
+            padding: 32px 16px;
+        }
+        .values{
+            flex-direction: column;
+            align-items: center;
+        }
+        .values__description, .values__img{
+            width: 100%;
+            text-align: center;
+            padding: 16px 16px;
+        }
+
+        .pricing__section--title{
+            font-size: 36px;
+            padding: 16px 0;
+        }
+        .plans{
+            flex-direction: column;
+            align-items: center;
+        }
+        .plan{
+            width: 100%;
+            margin: 16px 0;
+        }
+        #testimonials .row{
+            flex-direction: column;
+        }
+        .testimonials__img, .testimonials__descriptions{
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            text-align: center;
+        }
+        .testimonial__bottom{
+            flex-direction: column;
+            align-items: center;
+        }
+        .testimonial__profile{
+            flex-direction: column;
+            align-items: center;
+        }
+        .testimonial__details{
+            padding: 16px 0 0 0;
+            text-align: center;
+        }
+        .testimonial__buttons{
+            margin-top: 16px;
+        }
+        .start__title, .start__buttons{
+            width: 100%;
+            text-align: center;
+            padding: 0;
+        }
+        .start__buttons{
+            justify-content: center;
+        }
+        .footer__row{
+            flex-direction: column;
+            flex-wrap: wrap;
+            text-align: center;
+            padding: 24px 8px;
+        }
+        .footer__columns{
+           padding: 8px 16px 8px 16px; 
+           flex-wrap: wrap;
+           justify-content: center;
+        }
+        .footer__column{
+            margin: 16px 16px;
+            align-items: center;
+            font-size: 12px;
+            padding: 8px 24px;
+        }
+        .footer__bottom{
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        .footer__logo{
+            margin-bottom: 16px;            
+        }     
+        .footer__copyright{
+            font-size: 16px;
+            padding: 0 0 16px 0;
+        }
     }
