--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,10 @@ a:hover{
     align-items: center;
 }
 
+ul{
+    display: flex;
+}
+
 li{  
     text-decoration: none;
     flex-direction: row;
@@ -113,7 +117,8 @@ li{
     background-color: transparent;
     border: none;
     font-size: 32px;
-    color: #7342d6;    
+    color: #7342d6;  
+    text-align: center;  
 }
 
 .menu__backdrop{
@@ -790,7 +795,7 @@ p{
 
 .footer__container{
     width: 100%;
-    height: 800px;
+    height: 500px;
     background-color: rgb(100, 21, 255);
     border-radius: 8px;
     display: flex;
@@ -845,6 +850,7 @@ p{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 28px;
 }
 
 .footer__logo{
@@ -877,6 +883,7 @@ p{
         padding: 0;
         margin: auto;
         width: 100%;
+        padding: 8px 16px 0 16px;
     }
 
     .btn__menu{
@@ -1110,6 +1117,11 @@ p{
     .footer__logo{
         margin-bottom: 16px;
     }
+
+    .footer__copyright{
+        font-size: 16px;
+        padding: 0 0 16px 0;
+    }
 }
    
 /* SMALL PHONES, LARGE SMARTPHONES */
@@ -1221,6 +1233,12 @@ p{
         .start__buttons{
             justify-content: center;
         }
+
+        .footer__container{
+            height: auto;
+            padding: 48px 0;
+        }
+
         .footer__row{
             flex-direction: column;
             flex-wrap: wrap;
