--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ html{
 }
 
 body{
-    max-width: 100vw;
+    max-width: 1200px;
+    margin: 0 auto;
     overflow-x: hidden;
 }
 
@@ -751,8 +752,7 @@ p{
 }
 
 .start__row{
-    width: 100%;
-    max-width: 1200px;
+    width: 100%;    
     padding: 0 32px;
     display: flex;
     justify-content: center;
@@ -800,7 +800,6 @@ p{
 
 .footer__container{
     width: 100%;
-    max-width: 1200px;
     height: 500px;
     background-color: rgb(100, 21, 255);
     border-radius: 8px;
@@ -812,7 +811,6 @@ p{
 
 .footer__row{
     width: 100%;
-    max-width: 1200px;
     padding: 0 32px;
     color: white;
     display: flex;
