--- a/styles.css
+++ b/styles.css
@@ -397,8 +397,7 @@ p{
 
 /* STEPS */
 
-#steps .row{
-    margin: 24px auto;
+#steps .row{    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -416,7 +415,7 @@ p{
 .steps__description{
     display: flex;
     flex-direction: column;
-    margin: 48px 24px;
+    margin: 0 24px;
     width: 50%;
     padding: 84px 16px;
 }
@@ -429,7 +428,7 @@ p{
 .step__number{
     font-size: 32px;
     font-weight: 500;
-    color: #bfbfbf;
+    color: #bfbfbf;   
 }
 
 .step__description{
@@ -753,7 +752,7 @@ p{
 
 .start__row{
     width: 100%;    
-    padding: 0 32px;
+    padding: 0 24px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1182,7 +1181,12 @@ p{
             padding: 0;
             margin: 0;
         }
-        .steps__description{
+
+        .step__number{
+            font-size: 24px;
+        }
+
+        .step__description{
             padding: 32px 16px;
         }
         .values{
